# pyPhysX

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
examples/: hello_cpu.py  hello_gpu.py  hello_world.py  pyproject.toml  usd_loader.py  utils.py
src/: py_actor.cpp  py_aggregate.cpp  py_articulation_reduced_coordinate.cpp  py_constraint.cpp  py_controller.cpp  py_convex_mesh.cpp  py_cooking.cpp  py_cuda.cpp  py_cuda.h  py_device.cpp  py_device.h  py_filter.cpp  py_foundation.cpp  py_height_field.cpp  py_io.cpp  py_joint.cpp  py_material.cpp  py_math.cpp  py_particle.cpp  py_physics.cpp  py_physx_ext.cpp  py_query.cpp  py_render.cpp  py_scene.cpp  py_shape.cpp  py_soft_body_mesh.cpp  py_tetrahedron_mesh.cpp  py_triangle_mesh.cpp  py_utils.cpp  py_utils.h
src/pyPhysX/: __init__.py  __init__.pyi  utils.py  utils.pyi
tests/: test_enum.py
